Fix NPE in GUI
(cherry picked and adapted from commit bfffb7fcbb42772c1b824ff943be91714e8049f9)